# C-SudokuSolver

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md
include/: ft_sudoku.h
src/: Makefile  cell.c  grid.c  grid_integrity.c  solver.c
